tests/analyze/remote-endpoint-not-task/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: A `remote def` must be `fun request A.. -> task R`: it must return a `task` (the call is async).
> 5 | public remote def add-one :: fun request int -> int = fun _req n {
                        ^^^^^^^
